# BillingBot

./: .pylintrc  bot.py  chat.py  db.py  fun.py  main.py  openai_service.py  pylint.json  pyproject.toml  pyrightconfig.json  requirements.txt  system_prompt.md  timeout_manager.py
.github/workflows/: lint.yml
custom_interaction/: confirm_or_reject.py
interaction/: chat.py  confirm_or_reject.py  reply.py
llm/: config.py  filter.py  llm.py  prompt_store.py
prompts/: event.md  system.chisheng_chen.md  system.default.md
repository/: borrow_repository.py  chat_repository.py  return_repository.py  summary_repository.py  timer_repository.py
schemas/: borrow_data.py  chat_message.py  return_data.py  summary_data.py  timers.py  user_data.py
slash_commands/: __init__.py  clear_history.py  query_balance.py  return_command.py  summary.py  switch_mode.py
sql/: create_chat_tables.sql  create_indexes.sql  create_llm_tables.sql  create_tables.sql  trigger_check_user_exists.sql  trigger_update_summary.sql
tools/: __init__.py  base.py  discord_tool.py  timer_tool.py
utils/: edit_origin_message.py  send_like_human.py
