[project]
name = "billingbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "openai>=2.32.0",
    "orjson>=3.11.8",
    "py-cord>=2.7.0",
    "pydantic>=2.12.5",
    "pydantic-snowflake>=0.1.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pylint>=3.0.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
